#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

lib_LTLIBRARIES = libbasic_utilities.la

libbasic_utilities_la_SOURCES = basic-utilities.cpp
libbasic_utilities_la_CPPFLAGS = @PFICT_CPPFLAGS@
libbasic_utilities_la_LDFLAGS = @PFICT_LDFLAGS@
libbasic_utilities_la_LIBADD = @PFICT_LIBADD@
