#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

lib_LTLIBRARIES = libconc_queue.la

libconc_queue_la_SOURCES = concurrent-queue.h
libconc_queue_la_CPPFLAGS = @PFICT_CPPFLAGS@
libconc_queue_la_LDFLAGS = @PFICT_LDFLAGS@
libconc_queue_la_LIBADD = @PFICT_LIBADD@
