#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

lib_LTLIBRARIES = libsecond_exam.la

libsecond_exam_la_SOURCES = tcp-echo-server.cpp ethernet-connector.cpp
libsecond_exam_la_CPPFLAGS = @PFICT_CPPFLAGS@
libsecond_exam_la_LDFLAGS = @PFICT_LDFLAGS@
libsecond_exam_la_LIBADD = @PFICT_LIBADD@
