#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = basic_utilities_test

basic_utilities_test_SOURCES = basic-utilities-test.cpp

basic_utilities_test_CPPFLAGS = @PFICT_CPPFLAGS@ 
basic_utilities_test_LDFLAGS = @PFICT_LDFLAGS@
basic_utilities_test_LDADD = @PFICT_LDADD@ 
