#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = second_exam_test

second_exam_test_SOURCES = second-exam-test.cpp

second_exam_test_CPPFLAGS = @PFICT_CPPFLAGS@ 
second_exam_test_LDFLAGS = @PFICT_LDFLAGS@
second_exam_test_LDADD = @PFICT_LDADD@ 